# stampede

./: .gitignore  README.md  pyproject.toml  requirements.yaml  tutorial.ipynb
.github/workflows/: docs.yml
data/: sample2fov.csv
docs/: README.md  api.rst  citation.rst  conf.py  index.rst  installation.rst  tutorial.rst
docs/notebooks/: tutorial.ipynb
stamp/: __init__.py  _analyses.py  _config.py  _dim_red.py  _process.py  _qc.py  _read.py  config.py  dim_red.py  filter.py  pl.py  pp.py  process.py  qc.py  read.py  tl.py
stampede/: __init__.py  _analyses.py  _config.py  _dim_red.py  _filter.py  _process.py  _qc.py  _read.py  pl.py  pp.py  tl.py
stampede/_tools/: geosketch.py  pydeseq2.py  statsmodels.py
tests/: test_01_lint.py
