[project]
name = "stamp"
description = ""
authors = [
    {name = "Niels Velthuijs", email = "niels@mhlangalab.org"},
    {name = "Siebren Frölich", email = "siebrenf@gmail.com"},
]
maintainers = [
    {name = "Siebren Frölich", email = "siebrenf@gmail.com"},
    {name = "Niels Velthuijs", email = "niels@mhlangalab.org"},
]
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
dynamic = ["dependencies", "version"]

[project.optional-dependencies]
# must be specified here for the github action
docs = [
    "sphinx >=9.0.0",
    "sphinx-rtd-theme",
    "m2r2 >=0.3.2",
    "nbsphinx",
]

[build-system]
# hatchling is the build backend, and reads the version from the code
# unidep reads (optional) dependencies from the requirements.yaml
requires = [
    "hatchling >=1.5.0",
    "unidep",
]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "stamp/__init__.py"

[tool.isort]
profile = "black"
conda_env = "requirements.yml"
overwrite_in_place = true
