[project]
name = "stampede"
description = ""
authors = [
    {name = "Niels Velthuijs", email = "niels@mhlangalab.org"},
    {name = "Siebren Frölich", email = "siebrenf@gmail.com"},
]
maintainers = [
    {name = "Siebren Frölich", email = "siebrenf@gmail.com"},
    {name = "Niels Velthuijs", email = "niels@mhlangalab.org"},
]
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
dynamic = ["version"]

requires-python = ">=3.12"
dependencies = [
    "adjustText",
    "anndata",
    "matplotlib",
    "natsort",
    "numpy",
    "pandas <3",  # anndata 0.12 cannot handle string columns
    #"python >=3.12",  # f-strings
    "igraph",  # sc.tl.leiden
    "scanpy",
    "scikit-learn",
    "scipy",
    "seaborn",
]

[project.optional-dependencies]
tools = [
    "geosketch",
    "pydeseq2",
    "statsmodels",
]
docs = [
    "m2r2 >=0.3.2",
    "myst-nb",
    "pydata-sphinx-theme >=0.17.1",
    "pydeseq2",  # for type hinting
    "sphinx",
    "sphinx-autodoc-typehints",
]
test = [
    "black",
    "ipykernel",
    "isort",
    "pytest",
]

[build-system]
# hatchling is the build backend, and reads the version from the code
requires = ["hatchling >=1.5.0"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "stampede/__init__.py"

[tool.isort]
profile = "black"
conda_env = "requirements.yml"
overwrite_in_place = true
